<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/order_setting_bg">

    <include
        android:id="@+id/header_layout"
        layout="@layout/layout_header" />

    <RelativeLayout
        android:id="@+id/input_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/textView_houses" />

                <TextView
                    android:id="@+id/tv_houses"
                    style="@style/style_lable2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_packages"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:id="@+id/tv_packages"
                    style="@style/style_lable2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_weight" 
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:id="@+id/tv_weight"
                    style="@style/style_lable2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textView_capacity" 
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:id="@+id/tv_capacity"
                    style="@style/style_lable2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_sync"
            style="@style/style_black_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/sync" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/body_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/input_content_layout"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <include
            android:id="@+id/transfer_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_order_detail" />

        <Spinner
            android:id="@+id/drivers_spinner"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_transfer" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            style="@style/style_yellow_button"
            android:layout_gravity="center"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_transfer"
            style="@style/style_orange_button"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/transfer" />
    </LinearLayout>

</RelativeLayout>