<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <include
        android:id="@+id/header_layout"
        layout="@layout/layout_header" />

    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_layout"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_sync"
            style="@style/style_black_button"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/sync" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_complete"
                style="@style/style_completed_button"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:text="@string/complete"
                android:enabled="false"
                android:focusable="true" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_change_estimated_time"
                    style="@style/style_blue_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="top|center"
                    android:layout_marginBottom="5dp"
                    android:enabled="false"
                    android:text="@string/change_estimated_time" />

                <Button
                    android:id="@+id/btn_others"
                    style="@style/style_blue_button"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="5dp"
                    android:enabled="false"
                    android:text="@string/others" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_absence"
                style="@style/style_absence_button"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:enabled="false"
                android:text="@string/absence" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_edit"
        android:layout_below="@+id/action_layout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/selected_image"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>
            
            <Gallery
                android:id="@+id/destination_gallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:spacing="10dp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_edit"
        style="@style/style_pink_button"
        android:layout_above="@+id/btn_back"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:text="@string/edit" />

    <Button
        android:id="@+id/btn_back"
        style="@style/style_yellow_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/btn_take_pic"
        style="@style/style_take_pic_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"/>

</RelativeLayout>